--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lang-format-plugin",
+  "name": "@reasy-team/lang-format-plugin",
   "version": "1.0.0",
   "description": "将项目中的lang语言包文件夹经过此插件处理后输出到目标文件夹，处理包括：",
   "main": "index.js",
